[package]
name = "vim-forcer-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
vim-forcer-common = { path = "../vim-forcer-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "vim-forcer"
path = "src/main.rs"
